# cockroach

./: .bazelrc  DEPS.bzl  Makefile  WORKSPACE  go.mod  go.sum
.aspect/rules/external_repository_action_cache/: npm_translate_lock_LTY0NDkzMjUwNQ==
pkg/: BUILD.bazel
pkg/cmd/dev/: ui.go
pkg/cmd/mirror/go/: BUILD.bazel
pkg/cmd/mirror/npm/: BUILD.bazel
pkg/cmd/mirror/ui/: BUILD.bazel  index.bzl  index.js  main.go  model.go  package.json
pkg/server/: BUILD.bazel  server.go  server_http.go  server_ssh.go
pkg/ui/: BUILD.bazel  package.json
pkg/ui/distccl/assets/: index.html
pkg/ui/protobuf-client/: BUILD.bazel  defs.bzl  package.json  protos-only.package.json
pkg/ui/workspaces/cluster-ui/: BUILD.bazel  esbuild.js  package.json  tsconfig.json  webpack-swc.config.js  webpack.config.js
pkg/ui/workspaces/cluster-ui/src/barCharts/: utils.spec.ts
pkg/ui/workspaces/cluster-ui/src/core/: typography.module.scss
pkg/ui/workspaces/cluster-ui/src/databaseDetailsPage/: databaseDetailsPage.tsx
pkg/ui/workspaces/cluster-ui/src/databaseTablePage/: databaseTablePage.tsx
pkg/ui/workspaces/cluster-ui/src/databasesPage/: databasesPage.tsx
pkg/ui/workspaces/cluster-ui/src/dateRange/: dateRange.tsx
pkg/ui/workspaces/cluster-ui/src/loading/: loading.spec.tsx
pkg/ui/workspaces/cluster-ui/src/modal/: modal.tsx
pkg/ui/workspaces/cluster-ui/src/pagination/: pagination.tsx  resultsPerPageLabel.spec.tsx
pkg/ui/workspaces/cluster-ui/src/queryFilter/: filter.tsx
pkg/ui/workspaces/cluster-ui/src/search/: search.tsx
pkg/ui/workspaces/cluster-ui/src/sessions/: sessionDetails.tsx  sessionsPage.tsx  sessionsTable.tsx
pkg/ui/workspaces/cluster-ui/src/sortedtable/: sortedtable.spec.tsx
pkg/ui/workspaces/cluster-ui/src/sortedtable/tableSpinner/: tableSpinner.tsx
pkg/ui/workspaces/cluster-ui/src/statementDetails/: statementDetails.spec.tsx  statementDetails.tsx
pkg/ui/workspaces/cluster-ui/src/statementDetails/diagnostics/: diagnosticsView.spec.tsx
pkg/ui/workspaces/cluster-ui/src/statementDetails/planView/: planView.module.scss  planView.spec.tsx
pkg/ui/workspaces/cluster-ui/src/statementsPage/: statementsPage.spec.tsx  statementsPage.tsx
pkg/ui/workspaces/cluster-ui/src/store/: reducers.spec.ts
pkg/ui/workspaces/cluster-ui/src/store/statementDiagnostics/: statementDiagnostics.selectors.spec.ts
pkg/ui/workspaces/cluster-ui/src/table/: table.tsx
pkg/ui/workspaces/cluster-ui/src/timeScaleDropdown/: rangeSelect.tsx  timeFrameControls.tsx  timeScaleDropdown.tsx  timescale.spec.tsx
pkg/ui/workspaces/cluster-ui/src/transactionDetails/: transactionDetails.tsx
pkg/ui/workspaces/cluster-ui/src/transactionsPage/: transactionsPageClasses.ts  utils.spec.ts
pkg/ui/workspaces/cluster-ui/src/transactionsTable/: transactionsTable.tsx  transactionsTableClasses.ts
pkg/ui/workspaces/cluster-ui/src/util/: format.spec.ts  intersperse.spec.ts  proto.spec.ts  totalWorkload.spec.ts
pkg/ui/workspaces/cluster-ui/src/util/appStats/: aggregateStatementStats.spec.ts  appStats.spec.ts
pkg/ui/workspaces/cluster-ui/src/util/query/: query.spec.ts
pkg/ui/workspaces/cluster-ui/src/util/sql/: summarize.spec.ts
pkg/ui/workspaces/db-console/: BUILD.bazel  esbuild.js  esbuild.protos.js  karma.conf.js  package.json  pnpm-lock.yaml  webpack.app.js
pkg/ui/workspaces/db-console/src/: app.spec.tsx  app.tsx  index.tsx
pkg/ui/workspaces/db-console/src/components/anchor/: anchor.module.styl
pkg/ui/workspaces/db-console/src/components/badge/: badge.module.styl
pkg/ui/workspaces/db-console/src/components/button/: button.module.styl
pkg/ui/workspaces/db-console/src/components/dropdown/: dropdown.styl  dropdown.tsx
pkg/ui/workspaces/db-console/src/components/empty/: empty.module.styl
pkg/ui/workspaces/db-console/src/components/globalNavigation/: globalNavigation.styl
pkg/ui/workspaces/db-console/src/components/infoTooltip/: infoTooltip.styl
pkg/ui/workspaces/db-console/src/components/inlineAlert/: inlineAlert.module.styl
pkg/ui/workspaces/db-console/src/components/input/: input.styl
pkg/ui/workspaces/db-console/src/components/link/: link.module.styl
pkg/ui/workspaces/db-console/src/components/modal/: modal.styl  modal.tsx
pkg/ui/workspaces/db-console/src/components/pageHeader/: pageHeader.styl
pkg/ui/workspaces/db-console/src/components/rangeCalendar/: rangeCalendar.module.styl  rangeCalendar.tsx
pkg/ui/workspaces/db-console/src/components/select/: select.styl
pkg/ui/workspaces/db-console/src/components/sideNavigation/: sideNavigation.styl
pkg/ui/workspaces/db-console/src/components/text/: text.styl
pkg/ui/workspaces/db-console/src/components/tooltip/: tooltip.styl
pkg/ui/workspaces/db-console/src/interfaces/: assets.d.ts
pkg/ui/workspaces/db-console/src/redux/: analytics.spec.ts
pkg/ui/workspaces/db-console/src/util/: fetch-mock.ts  mockComponent.tsx
pkg/ui/workspaces/db-console/src/views/app/components/Search/: index.tsx  search.module.styl
pkg/ui/workspaces/db-console/src/views/app/components/chip/: styles.styl
pkg/ui/workspaces/db-console/src/views/app/components/errorMessage/: errorMessage.styl
pkg/ui/workspaces/db-console/src/views/app/components/feedbackSurveyLink/: feedbackSurveyLink.styl  (+1 more)
pkg/ui/workspaces/db-console/src/views/dashboard/: emailSubscription.styl
pkg/ui/workspaces/db-console/src/views/hotRanges/: hotRanges.module.styl
pkg/ui/workspaces/db-console/src/views/jobs/: index.styl  jobDetails.tsx  jobStatus.module.styl
pkg/ui/workspaces/db-console/src/views/login/: loginPage.styl
pkg/ui/workspaces/db-console/src/views/shared/util/: table.styl
pkg/ui/workspaces/db-console/src/views/sqlActivity/: sqlActivityPage.tsx
pkg/ui/workspaces/db-console/src/views/statements/: statements.styl  statementsTableContent.module.styl
pkg/ui/workspaces/db-console/styl/base/: palette.styl  typography.styl
pkg/ui/workspaces/db-console/styl/utils/: fonts.styl
pkg/ui/workspaces/eslint-plugin-crdb/: jest.config.js
pkg/ui/workspaces/eslint-plugin-crdb/src/: index.ts  require-antd-style-import.spec.ts  require-antd-style-import.ts
(+74 files in other folders)
