load("@//pkg/ui/workspaces/db-console/src/js:defs.bzl", "protobufjs_library")
load("@build_bazel_rules_nodejs//:index.bzl", "js_library")
load("@aspect_bazel_lib//lib:copy_to_directory.bzl", "copy_to_directory")

protobufjs_library(
    name = "crdb-protobuf-client__proto-oss",
    out_name = "protos",
    protos = [
        "//pkg/server/serverpb:serverpb_proto",
        "//pkg/ts/tspb:tspb_proto",
    ],
)

js_library(
    name = "crdb-protobuf-client-oss",
    package_name = "@cockroachlabs/crdb-protobuf-client",
    srcs = [
        "package.json",
    ],
    visibility = ["//visibility:public"],
    deps = [":crdb-protobuf-client__proto-oss"],
)

copy_to_directory(
  name = "package-oss",
  srcs = [
    ":crdb-protobuf-client-oss"
  ],
)
